--- a/App/CheongBit/Views/1_MainTab.storyboard
+++ b/App/CheongBit/Views/1_MainTab.storyboard
@@ -20,22 +20,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="uZV-b8-Spl">
-                                <rect key="frame" x="50" y="160" width="290" height="404"/>
+                                <rect key="frame" x="70" y="188" width="250" height="348"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="micOff" translatesAutoresizingMaskIntoConstraints="NO" id="k91-zu-IdK">
-                                        <rect key="frame" x="8" y="0.0" width="274" height="274.33333333333331"/>
+                                        <rect key="frame" x="3" y="0.0" width="244" height="243.66666666666666"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="k91-zu-IdK" secondAttribute="height" multiplier="1:1" id="neg-F4-aXM"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인식 중이 아님" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EjY-0R-nJN" customClass="whiteText" customModule="CheongBit" customModuleProvider="target">
-                                        <rect key="frame" x="77.666666666666686" y="274.33333333333331" width="135" height="28.666666666666686"/>
+                                        <rect key="frame" x="57.666666666666671" y="243.66666666666666" width="135" height="34.666666666666657"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tgP-vt-qPD">
-                                        <rect key="frame" x="94.666666666666657" y="303" width="100.66666666666666" height="101"/>
+                                        <rect key="frame" x="90.333333333333343" y="278.33333333333331" width="69.333333333333343" height="69.666666666666686"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="tgP-vt-qPD" secondAttribute="height" multiplier="1:1" id="bRF-UW-6Fy"/>
                                         </constraints>
@@ -45,9 +45,12 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="uZV-b8-Spl" secondAttribute="height" multiplier="145:202" id="c0j-Ss-a65"/>
+                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Crw-Sk-Xv1" customClass="reportButton" customModule="CheongBit" customModuleProvider="target">
-                                <rect key="frame" x="40" y="581.33333333333337" width="310" height="110.66666666666663"/>
+                                <rect key="frame" x="70" y="571" width="250" height="89.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Crw-Sk-Xv1" secondAttribute="height" multiplier="3.5:1.25" id="0mv-3J-67s"/>
                                 </constraints>
@@ -62,14 +65,14 @@
                         <viewLayoutGuide key="safeArea" id="uUg-Ms-x4c"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="k91-zu-IdK" firstAttribute="height" secondItem="yhW-BV-hyo" secondAttribute="height" multiplier="0.325" id="0tt-s1-g4m"/>
-                            <constraint firstItem="Crw-Sk-Xv1" firstAttribute="centerY" secondItem="uUg-Ms-x4c" secondAttribute="centerY" multiplier="1.5" id="1tI-jb-Efb"/>
+                            <constraint firstItem="k91-zu-IdK" firstAttribute="height" secondItem="uZV-b8-Spl" secondAttribute="height" multiplier="0.7" id="0tt-s1-g4m"/>
+                            <constraint firstItem="Crw-Sk-Xv1" firstAttribute="centerY" secondItem="uUg-Ms-x4c" secondAttribute="centerY" multiplier="1.45" id="1tI-jb-Efb"/>
                             <constraint firstItem="Crw-Sk-Xv1" firstAttribute="centerX" secondItem="yhW-BV-hyo" secondAttribute="centerX" id="BJ9-AI-0up"/>
-                            <constraint firstItem="Crw-Sk-Xv1" firstAttribute="leading" secondItem="uUg-Ms-x4c" secondAttribute="leading" constant="40" id="RH6-Ym-JPB"/>
-                            <constraint firstItem="uZV-b8-Spl" firstAttribute="leading" secondItem="uUg-Ms-x4c" secondAttribute="leading" constant="50" id="Rqp-Zg-2B3"/>
+                            <constraint firstItem="Crw-Sk-Xv1" firstAttribute="leading" secondItem="uUg-Ms-x4c" secondAttribute="leading" constant="70" id="RH6-Ym-JPB"/>
+                            <constraint firstItem="uZV-b8-Spl" firstAttribute="leading" secondItem="uUg-Ms-x4c" secondAttribute="leading" constant="70" id="Rqp-Zg-2B3"/>
                             <constraint firstItem="uZV-b8-Spl" firstAttribute="centerY" secondItem="yhW-BV-hyo" secondAttribute="centerY" constant="-60" id="a8a-AQ-LCq"/>
                             <constraint firstItem="uZV-b8-Spl" firstAttribute="centerX" secondItem="yhW-BV-hyo" secondAttribute="centerX" id="eZV-Ao-M1S"/>
-                            <constraint firstItem="tgP-vt-qPD" firstAttribute="height" secondItem="uUg-Ms-x4c" secondAttribute="height" multiplier="0.15" id="zj1-ke-hww"/>
+                            <constraint firstItem="tgP-vt-qPD" firstAttribute="height" secondItem="uZV-b8-Spl" secondAttribute="height" multiplier="0.2" id="zj1-ke-hww"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="RGB-XW-5Md">
