--- a/App/GOYO/Views/1_MainTab.storyboard
+++ b/App/GOYO/Views/1_MainTab.storyboard
@@ -104,7 +104,7 @@
                             <state key="normal" title="주소를 선택해주세요  ⌵"/>
                             <connections>
                                 <action selector="locationSelectbuttonTapped:" destination="zNb-AT-MS6" eventType="touchUpInside" id="Vhr-9Z-lYL"/>
-                                <segue destination="YLi-JK-DSt" kind="presentation" modalPresentationStyle="fullScreen" id="e2T-Hz-N4B"/>
+                                <segue destination="YLi-JK-DSt" kind="show" id="e2T-Hz-N4B"/>
                             </connections>
                         </button>
                     </navigationItem>
@@ -306,28 +306,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iCq-LY-OaC">
-                                <rect key="frame" x="16" y="54" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="NW1-GZ-iKd"/>
-                                    <constraint firstAttribute="width" secondItem="iCq-LY-OaC" secondAttribute="height" multiplier="1:1" id="qpm-IE-ht1"/>
-                                </constraints>
-                                <inset key="contentEdgeInsets" minX="4" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <state key="normal" title="Button">
-                                    <imageReference key="image" image="xmark" catalog="system" symbolScale="large"/>
-                                </state>
-                                <connections>
-                                    <action selector="backButtonTapped:" destination="YLi-JK-DSt" eventType="touchUpInside" id="JcA-Kc-mlT"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="주소를 입력하세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WWD-ct-O00">
-                                <rect key="frame" x="16" y="107" width="250" height="42"/>
+                                <rect key="frame" x="16" y="98" width="250" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Db7-Pe-KNn">
-                                <rect key="frame" x="16" y="159" width="358" height="53.666666666666657"/>
+                                <rect key="frame" x="16" y="150" width="358" height="53.666666666666657"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="주소를 검색하세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fEa-KR-YSr">
                                         <rect key="frame" x="0.0" y="0.0" width="294.33333333333331" height="53.666666666666664"/>
@@ -353,7 +339,7 @@
                                 </constraints>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4wm-0Q-FHf">
-                                <rect key="frame" x="0.0" y="252.66666666666669" width="390" height="557.33333333333326"/>
+                                <rect key="frame" x="0.0" y="243.66666666666669" width="390" height="517.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="locationCell" textLabel="j5F-ar-Cnd" detailTextLabel="kQd-pi-vtp" rowHeight="66" style="IBUITableViewCellStyleSubtitle" id="nvO-3M-Xub" customClass="LocationsTableViewCell" customModule="GOYO" customModuleProvider="target">
@@ -400,14 +386,12 @@
                             <constraint firstItem="Db7-Pe-KNn" firstAttribute="leading" secondItem="V8z-GN-pCe" secondAttribute="leading" constant="16" id="8hf-Sr-Dxn"/>
                             <constraint firstItem="4wm-0Q-FHf" firstAttribute="bottom" secondItem="V8z-GN-pCe" secondAttribute="bottom" id="A5C-jf-U2Y"/>
                             <constraint firstItem="V8z-GN-pCe" firstAttribute="trailing" secondItem="4wm-0Q-FHf" secondAttribute="trailing" id="A65-Tw-8Rr"/>
-                            <constraint firstItem="WWD-ct-O00" firstAttribute="top" secondItem="iCq-LY-OaC" secondAttribute="bottom" constant="23" id="I0H-6J-CeQ"/>
-                            <constraint firstItem="iCq-LY-OaC" firstAttribute="leading" secondItem="V8z-GN-pCe" secondAttribute="leading" constant="16" id="Pkd-a6-4sd"/>
                             <constraint firstItem="WWD-ct-O00" firstAttribute="leading" secondItem="V8z-GN-pCe" secondAttribute="leading" constant="16" id="T6r-ZR-1Jf"/>
-                            <constraint firstItem="V8z-GN-pCe" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="iCq-LY-OaC" secondAttribute="trailing" symbolic="YES" id="n7Q-xE-aKc"/>
                             <constraint firstItem="Db7-Pe-KNn" firstAttribute="centerX" secondItem="0N3-Es-Aav" secondAttribute="centerX" id="opw-Ii-2ZH"/>
-                            <constraint firstItem="iCq-LY-OaC" firstAttribute="top" secondItem="V8z-GN-pCe" secondAttribute="top" constant="10" id="ykb-NR-DvO"/>
+                            <constraint firstItem="WWD-ct-O00" firstAttribute="top" secondItem="V8z-GN-pCe" secondAttribute="top" constant="10" id="v87-QX-2cZ"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="7L7-lO-ob2"/>
                     <connections>
                         <outlet property="locationEnterLabel" destination="WWD-ct-O00" id="zLx-0P-2BK"/>
                     </connections>
@@ -449,7 +433,6 @@
         <image name="micOff" width="500" height="500"/>
         <image name="square" catalog="system" width="128" height="114"/>
         <image name="switchOff" width="500" height="500"/>
-        <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
